--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,6 @@
-Flask==1.1.1
-gunicorn==19.9.0
-itsdangerous==1.1.0
-Jinja2==2.10.1
-MarkupSafe==1.1.1
-Werkzeug==0.15.5
-numpy>=1.9.2
-scipy>=0.15.1
+numpy==1.21.4
+pickle-mixin==1.0.2
+streamlit==1.2.0
+streamlit-option-menu==0.3.2
 scikit-learn==1.0.1
-matplotlib>=1.4.3
-pandas>=0.19
-flasgger==0.9.4
-streamlit==1.11.0
+protobuf==3.20.1
